feat: 전체 API 통합 및 지도 최적화 완성본

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,10 @@
             android:exported="false" />
 
         <activity
+            android:name=".ui.map.MyMapActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".LogActivity"
             android:exported="false" />
 
