Add all remaining source code files - Complete travel app features with image display logic, main feed refresh, and UI improvements

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,10 @@
             android:exported="false" />
 
         <activity
+            android:name=".UserLogMapActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".LogActivity"
             android:exported="false" />
 
